# Cyber-demos

./: .env.example  .env.local  Dockerfile  Lessons_learned.md  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml  requirements.txt  windows_proc_inject.md
ai-security-lab/: README.md  testing-guide.md
ai-security-lab/backend/: app.py  requirements.txt  test_app.py
ai-security-lab/frontend/: index.html  package-lock.json  package.json
alembic/: env.py
alembic/versions/: 20250902_0001_init.py
app/: config.py  crud.py  db.py  deps.py  main.py  models.py  schemas.py  utils.py
app/routers/: accounts.py  analytics.py  profiles.py  transactions.py
backend/: Dockerfile  app.py  requirements.txt
doomcore-orbital-sim/: .env  Operator_Walkthrough.md  docker-compose.yml  doomgs-client.whl  link
doomcore-orbital-sim/backend/: Dockerfile
doomcore-orbital-sim/doomgs-client/: Dockerfile.dist  pyproject.toml
doomcore-orbital-sim/frontend/: Dockerfile  next.config.js
doomsat/: Dockerfile  doomcore.py  flash_init.py  protocol.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/pages/: firmware.tsx  index.js  index.jsx
groundstation/parser/: Dockerfile  telemetry_parser.c
vulnerable-rag-chatbot-demo/: README.md  requirements.txt
vulnerable-rag-chatbot-demo/app/: __init__.py  bot.py  main.py  retrieval.py  security.py
vulnerable-rag-chatbot-demo/attacks/: attack_prompts.txt  poison_kb.py  reset_kb.py
vulnerable-rag-chatbot-demo/data/: access_control.txt  incident_response.txt  internal_notes.txt  model_security_faq.txt  (+2 more)
(+58 files in other folders)
