[project]
name = "winnie-backend"
version = "1"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-dotenv>=1.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "python-multipart>=0.0.20"
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
factory = false
